<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>de.skymatic.app</groupId>
	<artifactId>appstore-reverse-charger</artifactId>
	<version>1.1.0-SNAPSHOT</version>

	<organization>
		<name>Skymatic</name>
		<url>https://skymatic.de</url>
	</organization>

	<name>Appstore Reverse Charger</name>
	<description>A small GUI tool for app sellers to parse financial reports from Apples App Store or Google Play Store and create invoices based on JavaFX</description>
	<url>https://github.com/skymatic/appstore-reverse-charger</url>

	<scm>
		<connection>scm:git:git@github.com:skymatic/appstore-reverse-charger.git</connection>
		<developerConnection>scm:git:git@github.com:skymatic/appstore-reverse-charger.git</developerConnection>
		<url>git@github.com:skymatic/appstore-reverse-charger.git</url>
	</scm>

	<developers>
		<developer>
			<name>Martin Beyer</name>
			<email>martin.beyer@skymatic.de</email>
			<timezone>+1</timezone>
			<organization>Skymatic GmbH</organization>
			<organizationUrl>http://skymatic.de</organizationUrl>
		</developer>
		<developer>
			<name>Armin Schrenk</name>
			<email>armin.Schrenk@skymatic.de</email>
			<timezone>+1</timezone>
			<organization>Skymatic GmbH</organization>
			<organizationUrl>http://skymatic.de</organizationUrl>
		</developer>
	</developers>

	<properties>
		<build.finalArtifact.name>reverseCharger</build.finalArtifact.name>
		<java.jpms.modulename>de.skymatic.appstore_invoices</java.jpms.modulename>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<jdk.version>21</jdk.version>
		<javafx.platform>overwritten-in-profiles</javafx.platform>

		<!-- code dependencies -->
		<openjfx.version>21.0.3</openjfx.version>
		<gson.version>2.10.1</gson.version>
		<!-- test dependencies -->
		<junit.jupiter.version>5.10.2</junit.jupiter.version>
		<mockito.version>5.11.0</mockito.version>
		<!-- build dependencies -->
		<maven-compiler.version>3.12.1</maven-compiler.version>
		<maven-surefire.version>3.2.5</maven-surefire.version>
		<maven-jar.version>3.3.0</maven-jar.version>
		<maven-dep.version>3.6.1</maven-dep.version>
		<exec-maven.version>3.2.0</exec-maven.version>
		<maven-assembly.version>3.6.0</maven-assembly.version>
		<itchy-replace.version>1.3</itchy-replace.version>
		<junit-tree-reporter.version>1.2.1</junit-tree-reporter.version>
	</properties>

	<dependencies>
		<!-- UI -->
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-controls</artifactId>
			<version>${openjfx.version}</version>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-fxml</artifactId>
			<version>${openjfx.version}</version>
		</dependency>
		<!--json output-->
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>${gson.version}</version>
		</dependency>

		<!-- Testing -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>${junit.jupiter.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>${junit.jupiter.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-params</artifactId>
			<version>${junit.jupiter.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>${mockito.version}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<profiles>
		<profile>
			<id>windows-build</id>
			<activation>
				<os>
					<family>windows</family>
				</os>
			</activation>
			<properties>
				<jpackage.jvmArgs.settings>-DsettingsPath="~/AppData/Roaming/AppStoreReverseCharger/settings.json"</jpackage.jvmArgs.settings>
				<targetPlatform>win</targetPlatform>
				<javafx.platform>win</javafx.platform>
			</properties>
		</profile>
		<profile>
			<id>macOS-build</id>
			<activation>
				<os>
					<family>mac</family>
				</os>
			</activation>
			<properties>
				<jpackage.jvmArgs.settings>-DsettingsPath="~/Library/Application' 'Support/AppStoreReverseCharger/settings.json"</jpackage.jvmArgs.settings>
				<targetPlatform>mac</targetPlatform>
				<javafx.platform>mac</javafx.platform>
			</properties>
		</profile>
		<profile>
			<id>linux-build</id>
			<activation>
				<os>
					<family>unix</family>
					<name>Linux</name>
				</os>
			</activation>
			<properties>
				<jpackage.jvmArgs.settings>-DsettingsPath="~/.local/share/AppStoreReverseCharger/settings.json"</jpackage.jvmArgs.settings>
				<targetPlatform>linux</targetPlatform>
				<javafx.platform>linux</javafx.platform>
			</properties>
		</profile>
	</profiles>
	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>${maven-compiler.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>${maven-surefire.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<version>${maven-jar.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-dependency-plugin</artifactId>
					<version>${maven-dep.version}</version>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>exec-maven-plugin</artifactId>
					<version>${exec-maven.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-assembly-plugin</artifactId>
					<version>${maven-assembly.version}</version>
				</plugin>
				<plugin>
					<groupId>io.github.1tchy</groupId>
					<artifactId>variable-search-replace-plugin</artifactId>
					<version>${itchy-replace.version}</version>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<release>${jdk.version}</release>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<dependencies>
					<dependency>
						<groupId>me.fabriciorby</groupId>
						<artifactId>maven-surefire-junit5-tree-reporter</artifactId>
						<version>${junit-tree-reporter.version}</version>
					</dependency>
				</dependencies>
				<configuration>
					<argLine>-XX:+EnableDynamicAgentLoading</argLine>
					<reportFormat>plain</reportFormat>
					<consoleOutputReporter>
						<disable>true</disable>
					</consoleOutputReporter>
					<statelessTestsetInfoReporter
							implementation="org.apache.maven.plugin.surefire.extensions.junit5.JUnit5StatelessTestsetInfoTreeReporter">
					</statelessTestsetInfoReporter>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<configuration>
					<outputDirectory>${project.build.directory}/libs</outputDirectory>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<executions>
					<execution>
						<id>copy-dependencies</id>
						<phase>package</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.build.directory}/libs</outputDirectory>
							<includeScope>runtime</includeScope>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>io.github.1tchy</groupId>
				<artifactId>variable-search-replace-plugin</artifactId>
				<executions>
					<execution>
						<phase>prepare-package</phase>
						<goals>
							<goal>replace</goal>
						</goals>
						<configuration>
							<text>${project.version}</text>
							<search>-SNAPSHOT</search>
							<replacement></replacement>
							<variableName>project.version.majorMinorPatch</variableName>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<executions>
					<execution>
						<id>jpackage</id>
						<phase>package</phase>
						<goals>
							<goal>exec</goal>
						</goals>
						<configuration>
							<executable>${env.JAVA_HOME}/bin/jpackage</executable>
							<workingDirectory>${project.build.directory}</workingDirectory>
							<commandlineArgs>--type app-image --add-modules ${java.jpms.modulename} --module-path libs/ --name ${build.finalArtifact.name} --description "Invoice generator for iOS App Store and Google Play" -m ${java.jpms.modulename}/de.skymatic.appstore_invoices.gui.AppStoreReverseCharger --app-version ${project.version.majorMinorPatch} --vendor "Skymatic GmbH" --java-options ${jpackage.jvmArgs.settings} </commandlineArgs>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<configuration>
					<descriptors>
						<descriptor>${project.basedir}/src/main/resources/assembly.xml</descriptor>
					</descriptors>
					<appendAssemblyId>true</appendAssemblyId>
					<finalName>${build.finalArtifact.name}</finalName>
				</configuration>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>
